// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compares two file sizes 1`] = `
FileSizeComparison {
  "filesize1": 1000,
  "filesize2": 2000,
}
`;

exports[`compares two file sizes 2`] = `
FileSizeComparison {
  "filesize1": 2000,
  "filesize2": 1000,
}
`;

exports[`compares two file sizes 3`] = `
FileSizeComparison {
  "filesize1": 0,
  "filesize2": 50,
}
`;

exports[`compares two file sizes 4`] = `
FileSizeComparison {
  "filesize1": 100,
  "filesize2": 100,
}
`;

exports[`compares two file sizes 5`] = `
FileSizeComparison {
  "filesize1": 0,
  "filesize2": 0,
}
`;
